# iot-projects

./: .gitignore
Arduino/automatic_blinds/: arduino_template.h  automatic_blinds.ino  deploy.sh
Arduino/wifi/: wifi.ino
rpi_gpio/: Cargo.toml  deploy.sh
rpi_gpio/.cargo/: config.toml
rpi_gpio/src/: main.rs
