[package]
name = "rpi_gpio"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
rppal = "0.16.1"
simple-signal = "1.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




